added client setup
