# pkg/dtos/client.go
@@ -2,7 +2,7 @@ package dtos
 
 import "github.com/google/uuid"
 
-type GetClientsDTO struct {
+type ListClientsDTO struct {
 	ID                       uuid.UUID `json:"id"`
 	Name                     string    `json:"name"`
 	Description              string    `json:"description"`
